[package]
name = "perf-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minstant = "0.1.3"
ctor = "0.2.5"
tokio = { workspace = true, features = ["sync"] }
revm-utils = { workspace = true, optional = true }
revm = { workspace = true, optional = true }

ffi = { package = "reth-mdbx-sys", path = "../storage/libmdbx-rs/mdbx-sys" }
libc = "0.2"

alloy-trie = { workspace = true, features = ["arbitrary"] }

[features]
enable_opcode_metrics = [
    "revm-utils",
    "revm/enable_opcode_metrics"]
enable_cache_record = ["revm-utils"]
enable_execution_duration_record = ["revm-utils"]
enable_tps_gas_record = []
enable_db_speed_record = []
enable_execute_measure = ["revm-utils"]
enable_write_to_db_measure = ["revm-utils",
    "revm/enable_transact_measure",
]
enable_state_root_record = ["revm-utils", "alloy-trie/enable_state_root_record"]
