[package]
name = "reth-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "reth specific revm utilities"

[dependencies]
# reth 
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-provider.workspace = true
reth-revm-primitives = { path = "./revm-primitives" }
reth-revm-inspectors = { path = "./revm-inspectors" }
reth-consensus-common = { path = "../consensus/common" }

# revm
revm.workspace = true

# metric
perf-metrics = { workspace = true, optional = true }

# common
tracing.workspace = true

[dev-dependencies]
reth-rlp.workspace = true
once_cell = "1.17.0"

[features]
enable_opcode_metrics = [
    "revm/enable_opcode_metrics",
    "perf-metrics/enable_opcode_metrics",
    ]
enable_cache_record = [
    "revm/enable_cache_record",
    "reth-provider/enable_cache_record",
]
enable_execute_measure = [
    "perf-metrics/enable_execute_measure",
]