[package]
name = "reth-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "reth specific revm utilities"

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-provider.workspace = true
reth-consensus-common.workspace = true
reth-node-api.workspace = true

# revm
revm.workspace = true
revm-inspectors.workspace = true

# metric
perf-metrics = { workspace = true, optional = true }

# common
tracing.workspace = true

[dev-dependencies]
reth-trie.workspace = true
reth-node-ethereum.workspace = true
reth-node-optimism.workspace = true

[features]
optimism = [
  "revm/optimism",
  "reth-primitives/optimism",
  "reth-consensus-common/optimism",
  "reth-interfaces/optimism",
]
js-tracer = ["revm-inspectors/js-tracer"]
enable_opcode_metrics = [
    "revm/enable_opcode_metrics",
    "perf-metrics/enable_opcode_metrics",
    ]
enable_cache_record = [
    "revm/enable_cache_record",
    "reth-provider/enable_cache_record",
]
enable_execute_measure = [
    "perf-metrics/enable_execute_measure",
    "revm/enable_transact_measure",
]
