[package]
name = "reth-stages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Staged syncing primitives used in reth."

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = [
    # Used for diagrams in docs
    "aquamarine",
]

[dependencies]
# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-db.workspace = true
reth-codecs.workspace = true
reth-provider.workspace = true
reth-trie.workspace = true
reth-tokio-util.workspace = true

# revm
revm.workspace = true

# async
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
async-trait.workspace = true
futures-util.workspace = true
pin-project.workspace = true

# observability
tracing.workspace = true

# io
serde.workspace = true

# metrics
reth-metrics.workspace = true
metrics.workspace = true

# misc
thiserror.workspace = true
aquamarine.workspace = true
itertools.workspace = true
rayon.workspace = true
num-traits = "0.2.15"
auto_impl = "1"

# metric
perf-metrics.workspace = true

[dev-dependencies]
# reth
reth-primitives = { workspace = true, features = ["test-utils", "arbitrary"] }
reth-db = { workspace = true, features = ["test-utils", "mdbx"] }
reth-interfaces = { workspace = true, features = ["test-utils"] }
reth-downloaders.workspace = true
reth-eth-wire.workspace = true # TODO(onbjerg): We only need this for [BlockBody]
reth-node-ethereum.workspace = true
reth-node-optimism.workspace = true
reth-blockchain-tree.workspace = true
reth-revm.workspace = true
reth-trie = { workspace = true, features = ["test-utils"] }

alloy-rlp.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
assert_matches.workspace = true
rand.workspace = true
paste = "1.0"

# Stage benchmarks
pprof = { workspace = true, features = ["flamegraph", "frame-pointer", "criterion"] }
criterion = { workspace = true, features = ["async_futures"] }

# io
serde_json.workspace = true


[features]
test-utils = ["reth-interfaces/test-utils", "reth-db/test-utils"]
open_performance_dashboard = []
enable_opcode_metrics = [
    "perf-metrics/enable_opcode_metrics",   
    "reth-revm/enable_opcode_metrics",
    "open_performance_dashboard",
    ]
enable_cache_record = [
    "perf-metrics/enable_cache_record", 
    "reth-revm/enable_cache_record",
    "open_performance_dashboard",
    ]
finish_after_execution_stage = []
enable_execution_duration_record = [
    "perf-metrics/enable_execution_duration_record",  
    "open_performance_dashboard",
    ]
enable_tps_gas_record = [
    "perf-metrics/enable_tps_gas_record",  
    "open_performance_dashboard",
    ]
enable_test_max_th = []
enable_db_speed_record =[
    "reth-provider/enable_db_speed_record", 
    "perf-metrics/enable_db_speed_record",  
    "open_performance_dashboard",
    ]
enable_execute_measure = [
    "perf-metrics/enable_execute_measure", 
    "reth-revm/enable_execute_measure",
    "open_performance_dashboard",
    ]
enable_write_to_db_measure = [
    "reth-provider/enable_write_to_db_measure", 
    "perf-metrics/enable_write_to_db_measure",
    "open_performance_dashboard",
    ]
enable_state_root_record = [
    "perf-metrics/enable_state_root_record",
    "open_performance_dashboard",
]

[[bench]]
name = "criterion"
harness = false
required-features = ["test-utils"]
